feat(app): FCM stub/ local
