# backend/src/routes/index.ts
@@ -3,6 +3,7 @@ import { Router } from 'express';
 import availabilityRouter from './availability.route';
 import bookingRouter from './booking.route';
 import mentorRouter from './mentor.route';
+import notificationRouter from './notification.route';
 import paymentRouter from './payment.route';
 import profileRouter from './profile.route';
 import reportRouter from './report.route';
@@ -18,6 +19,7 @@ router.use('/profile', profileRouter);
 router.use('/availability', availabilityRouter);
 router.use('/mentors', mentorRouter);
 router.use('/bookings', bookingRouter);
+router.use('/notifications', notificationRouter);
 router.use('/payments', paymentRouter);
 
 export default router;
